# Sovereign-SRE-Gym

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  blog.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_stationarity.py  train.py
server/: AFAA_environment.py  __init__.py  app.py  coordination.py  memory.py  npc_engine.py  npc_policy.py  rubrics.py  state_manager.py  verifier.py
